// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`emitFiles > matches the committed snapshot of the default build > README.md 1`] = `
"# Azure landing zone, generated for learning

These files were generated by the HybridCloudWorks Landing Zone Builder from a
selection of components, to show what each part of an Azure landing zone becomes in
Terraform. They mirror HashiCorp’s validated pattern "Build an Azure landing zone
with Terraform" and call the current Azure Verified Modules for it. **They were
generated for learning and have never been applied by HybridCloudWorks.** Read them,
compare them with the pattern, and if you run them, do it in a tenant you own, after
a \`terraform plan\` you have read.

## What is in this build

- **Management groups**: The tree of management groups every subscription is placed in. — \`Azure/avm-ptn-alz/azurerm\` 0.21.0
- **Policy baseline**: The Azure Policy assignments the alz architecture makes on each management group.
- **Management**: The Log Analytics workspace and Automation account that collect every subscription’s telemetry. — \`Azure/avm-ptn-alz-management/azurerm\` 0.9.0
- **Connectivity hub**: The hub virtual network, Bastion and DNS that every landing zone peers into. — \`Azure/avm-ptn-alz-connectivity-hub-and-spoke-vnet/azurerm\` 0.17.5
- **Azure Firewall**: The firewall in the hub that every private spoke’s traffic is routed through.
- **Identity**: The identity subscription, placed under the Identity group, with its own spoke. — \`Azure/avm-res-network-virtualnetwork/azurerm\` 0.22.2
- **Corp landing zone (1)**: An application subscription for internal workloads, reached only through the hub. — \`Azure/avm-res-network-virtualnetwork/azurerm\` 0.22.2
- **Online landing zone (1)**: An application subscription that may face the internet and still uses the hub. — \`Azure/avm-res-network-virtualnetwork/azurerm\` 0.22.2

## Files

- \`terraform.tf\`
- \`providers.tf\`
- \`alz.tf\`
- \`subscriptions.tf\`
- \`management.tf\`
- \`connectivity.tf\`
- \`identity.tf\`
- \`application.tf\`
- \`variables.tf\`
- \`terraform.tfvars.example\`

## Prerequisites, from the validated pattern

- An HCP Terraform organisation with a workspace connected to the repository these
  files are committed to, holding the state and running the plans.
- An Azure tenant in which the deploying identity has been granted Owner at the tenant
  root scope (\`/\`), which is what creating management groups and assigning policy at
  the root requires; a Global Administrator elevates access to grant it.
- A service principal (or a workload identity federation credential) for the workspace,
  with its tenant, client and subscription set as the workspace’s \`ARM_TENANT_ID\`,
  \`ARM_CLIENT_ID\`, \`ARM_CLIENT_SECRET\` and \`ARM_SUBSCRIPTION_ID\` variables.
- One subscription per platform role and per application landing zone, whose ids go
  into \`terraform.tfvars\`. The ids in \`terraform.tfvars.example\` are placeholders, not
  defaults: every one must be replaced with a real subscription id before any plan.
- Terraform >= 1.12, < 2.0.

## How a landing zone is built

Each landing zone, identity included, is a subscription that \`alz.tf\` places under
its management group and a spoke virtual network, one /24 carved from the spoke range,
that the virtual network module peers to the hub in both directions. Corp and identity
spokes carry a route table whose default route points at the firewall when it is
selected; online spokes egress directly.

## Module versions

Pinned to the versions the Terraform Registry listed on 2026-09-25:

- \`Azure/avm-ptn-alz/azurerm\` 0.21.0
- \`Azure/avm-ptn-alz-management/azurerm\` 0.9.0
- \`Azure/avm-ptn-alz-connectivity-hub-and-spoke-vnet/azurerm\` 0.17.5
- \`Azure/avm-res-network-virtualnetwork/azurerm\` 0.22.2

## Running it

From a checkout with \`terraform.tfvars\` filled in:

\`\`\`
terraform init
terraform plan
\`\`\`

A landing zone creates resources that cost money every hour they exist: Azure
Firewall, Bastion, the Log Analytics workspace and the DDoS plan if you enable one.
Read the plan, and destroy what you built when the lesson is over.
"
`;

exports[`emitFiles > matches the committed snapshot of the default build > alz.tf 1`] = `
"# Management groups: the "alz" architecture, a root named "alz" with Platform and
# Landing zones beneath it. It is created under the tenant root group, or under the
# management group named in var.parent_management_group_id. The policy baseline is
# part of the same architecture: selecting Policy supplies its parameters and lets it
# enforce; leaving it out deploys the same assignments with every one set to
# DoNotEnforce.
data "azapi_client_config" "current" {}

module "alz" {
  source  = "Azure/avm-ptn-alz/azurerm"
  version = "0.21.0"

  # parent_resource_id is the parent management group NAME, not its resource id: the
  # module rejects a value containing "/" and prepends
  # /providers/Microsoft.Management/managementGroups/ itself. The tenant root group is
  # named after the tenant id, which is why that is the fallback.
  architecture_name  = "alz"
  location           = var.location
  parent_resource_id = coalesce(var.parent_management_group_id, data.azapi_client_config.current.tenant_id)
  enable_telemetry   = var.enable_telemetry

  # Each subscription is moved under the management group whose policies it should
  # inherit. The keys are labels; the names are the groups the alz architecture creates.
  subscription_placement = {
    management = {
      subscription_id       = var.management_subscription_id
      management_group_name = "management"
    }
    connectivity = {
      subscription_id       = var.connectivity_subscription_id
      management_group_name = "connectivity"
    }
    identity = {
      subscription_id       = var.identity_subscription_id
      management_group_name = "identity"
    }
    corp_1 = {
      subscription_id       = var.corp_subscription_ids[0]
      management_group_name = "corp"
    }
    online_1 = {
      subscription_id       = var.online_subscription_ids[0]
      management_group_name = "online"
    }
  }

  # The library declares fourteen policy default values. Every one the build has a
  # source for is supplied below, built from the names management.tf and
  # connectivity.tf use because the alz provider needs them at plan time; an
  # assignment whose value the build cannot supply is kept but not enforced, so
  # nothing is created from a library placeholder.
  policy_assignments_to_modify = {
    landingzones = {
      policy_assignments = {
        Enable-DDoS-VNET = {
          enforcement_mode = "DoNotEnforce"
        }
      }
    }
    connectivity = {
      policy_assignments = {
        Enable-DDoS-VNET = {
          enforcement_mode = "DoNotEnforce"
        }
      }
    }
  }

  # Terraform creates the management resources before the assignments that name them.
  policy_assignments_dependencies = [
    module.management.data_collection_rule_ids,
    module.management.resource_id,
    module.management.user_assigned_identity_ids,
  ]
  policy_default_values = {
    private_dns_zone_subscription_id            = jsonencode({ value = var.connectivity_subscription_id })
    private_dns_zone_resource_group_name        = jsonencode({ value = azurerm_resource_group.connectivity.name })
    private_dns_zone_region                     = jsonencode({ value = var.location })
    ama_user_assigned_managed_identity_id       = jsonencode({ value = provider::azapi::resource_group_resource_id(var.management_subscription_id, local.management_resource_group_name, "Microsoft.ManagedIdentity/userAssignedIdentities", [local.ama_user_assigned_identity_name]) })
    ama_user_assigned_managed_identity_name     = jsonencode({ value = local.ama_user_assigned_identity_name })
    ama_vm_insights_data_collection_rule_id     = jsonencode({ value = provider::azapi::resource_group_resource_id(var.management_subscription_id, local.management_resource_group_name, "Microsoft.Insights/dataCollectionRules", ["dcr-vm-insights"]) })
    ama_mdfc_sql_data_collection_rule_id        = jsonencode({ value = provider::azapi::resource_group_resource_id(var.management_subscription_id, local.management_resource_group_name, "Microsoft.Insights/dataCollectionRules", ["dcr-defender-sql"]) })
    ama_change_tracking_data_collection_rule_id = jsonencode({ value = provider::azapi::resource_group_resource_id(var.management_subscription_id, local.management_resource_group_name, "Microsoft.Insights/dataCollectionRules", ["dcr-change-tracking"]) })
    log_analytics_workspace_id                  = jsonencode({ value = provider::azapi::resource_group_resource_id(var.management_subscription_id, local.management_resource_group_name, "Microsoft.OperationalInsights/workspaces", [local.log_analytics_workspace_name]) })
    resource_group_location                     = jsonencode({ value = var.location })
    resource_group_name_service_health_alerts   = jsonencode({ value = "rg-alz-service-health-\${var.location}" })
    resource_group_name_mdfc                    = jsonencode({ value = "rg-alz-mdfc-export-\${var.location}" })
    email_security_contact                      = jsonencode({ value = var.security_contact_email })
  }
}

output "root_management_group_resource_id" {
  description = "The resource id of the \\"alz\\" management group at the top of the tree."
  value       = module.alz.management_group_resource_ids["alz"]
}
"
`;

exports[`emitFiles > matches the committed snapshot of the default build > application.tf 1`] = `
"# Application landing zones: one spoke per subscription, through the provider alias
# for that subscription. The subscription is placed under its management group in
# alz.tf; this file creates the network inside it and peers it to the hub. Each spoke
# is one /24 from the spoke range: corp from the low half, online from the high half.
# For 10.1.0.0/16 that is corp_1 = 10.1.0.0/24, online_1 = 10.1.128.0/24.
locals {
  spoke_address_spaces = {
    corp_1   = cidrsubnet(var.spoke_address_space, 8, 0)
    online_1 = cidrsubnet(var.spoke_address_space, 8, 128)
  }
}

resource "azurerm_resource_group" "spoke_corp_1" {
  provider = azurerm.corp_1

  location = var.location
  name     = "rg-alz-corp-1-\${var.location}"
}

resource "azurerm_route_table" "spoke_corp_1" {
  provider = azurerm.corp_1

  location                      = var.location
  name                          = "rt-alz-corp-1-\${var.location}"
  resource_group_name           = azurerm_resource_group.spoke_corp_1.name
  bgp_route_propagation_enabled = false

  route {
    name                   = "default-via-firewall"
    address_prefix         = "0.0.0.0/0"
    next_hop_type          = "VirtualAppliance"
    next_hop_in_ip_address = module.connectivity.firewall_private_ip_addresses["primary"]
  }
}

module "spoke_corp_1" {
  source  = "Azure/avm-res-network-virtualnetwork/azurerm"
  version = "0.22.2"

  location         = var.location
  name             = "vnet-alz-corp-1-\${var.location}"
  parent_id        = azurerm_resource_group.spoke_corp_1.id
  address_space    = [local.spoke_address_spaces.corp_1]
  enable_telemetry = var.enable_telemetry

  subnets = {
    workload = {
      name             = "snet-workload"
      address_prefixes = [local.spoke_address_spaces.corp_1]
      route_table = {
        id = azurerm_route_table.spoke_corp_1.id
      }
    }
  }

  peerings = {
    hub = {
      name                               = "peer-corp-1-to-hub"
      remote_virtual_network_resource_id = module.connectivity.virtual_network_resource_ids["primary"]
      allow_forwarded_traffic            = true
      create_reverse_peering             = true
      reverse_name                       = "peer-hub-to-corp-1"
      reverse_allow_forwarded_traffic    = true
    }
  }

  providers = {
    azapi = azapi.corp_1
  }
}

resource "azurerm_resource_group" "spoke_online_1" {
  provider = azurerm.online_1

  location = var.location
  name     = "rg-alz-online-1-\${var.location}"
}

module "spoke_online_1" {
  source  = "Azure/avm-res-network-virtualnetwork/azurerm"
  version = "0.22.2"

  location         = var.location
  name             = "vnet-alz-online-1-\${var.location}"
  parent_id        = azurerm_resource_group.spoke_online_1.id
  address_space    = [local.spoke_address_spaces.online_1]
  enable_telemetry = var.enable_telemetry

  subnets = {
    workload = {
      name             = "snet-workload"
      address_prefixes = [local.spoke_address_spaces.online_1]
    }
  }

  peerings = {
    hub = {
      name                               = "peer-online-1-to-hub"
      remote_virtual_network_resource_id = module.connectivity.virtual_network_resource_ids["primary"]
      allow_forwarded_traffic            = true
      create_reverse_peering             = true
      reverse_name                       = "peer-hub-to-online-1"
      reverse_allow_forwarded_traffic    = true
    }
  }

  providers = {
    azapi = azapi.online_1
  }
}
"
`;

exports[`emitFiles > matches the committed snapshot of the default build > connectivity.tf 1`] = `
"# Connectivity: one hub virtual network with a Bastion host, the gateway subnet for a
# future ExpressRoute or VPN (the gateways themselves are off), route tables, and
# an Azure Firewall (Standard) with its policy that every private spoke routes through.
# The private DNS zones for Private Link are created and linked to the hub.
resource "azurerm_resource_group" "connectivity" {
  provider = azurerm.connectivity

  location = var.location
  name     = "rg-alz-connectivity-\${var.location}"
}

module "connectivity" {
  source  = "Azure/avm-ptn-alz-connectivity-hub-and-spoke-vnet/azurerm"
  version = "0.17.5"

  enable_telemetry = var.enable_telemetry

  # A DDoS protection plan is a fixed monthly charge; the learning build leaves it out.
  hub_and_spoke_networks_settings = {
    enabled_resources = {
      ddos_protection_plan = false
    }
  }

  hub_virtual_networks = {
    primary = {
      location                  = var.location
      default_hub_address_space = var.hub_address_space
      default_parent_id         = azurerm_resource_group.connectivity.id
      enabled_resources = {
        firewall                              = true
        firewall_policy                       = true
        bastion                               = true
        private_dns_zones                     = true
        private_dns_resolver                  = true
        dns_resolver_policy                   = true
        virtual_network_gateway_express_route = false
        virtual_network_gateway_vpn           = false
      }
      firewall = {
        sku_tier = "Standard"
      }
      firewall_policy = {
        sku = "Standard"
      }
    }
  }

  providers = {
    azurerm = azurerm.connectivity
    azapi   = azapi.connectivity
  }
}
"
`;

exports[`emitFiles > matches the committed snapshot of the default build > identity.tf 1`] = `
"# Identity: the subscription for domain controllers and directory services, placed
# under the Identity management group in alz.tf. Its spoke is the top /24 of the
# spoke range’s low half (10.1.127.0/24 for 10.1.0.0/16), peered to the hub so
# every corp spoke can reach a domain controller, and private like a corp spoke.
locals {
  identity_address_space = cidrsubnet(var.spoke_address_space, 8, 127)
}

resource "azurerm_resource_group" "spoke_identity" {
  provider = azurerm.identity

  location = var.location
  name     = "rg-alz-identity-\${var.location}"
}

resource "azurerm_route_table" "spoke_identity" {
  provider = azurerm.identity

  location                      = var.location
  name                          = "rt-alz-identity-\${var.location}"
  resource_group_name           = azurerm_resource_group.spoke_identity.name
  bgp_route_propagation_enabled = false

  route {
    name                   = "default-via-firewall"
    address_prefix         = "0.0.0.0/0"
    next_hop_type          = "VirtualAppliance"
    next_hop_in_ip_address = module.connectivity.firewall_private_ip_addresses["primary"]
  }
}

module "spoke_identity" {
  source  = "Azure/avm-res-network-virtualnetwork/azurerm"
  version = "0.22.2"

  location         = var.location
  name             = "vnet-alz-identity-\${var.location}"
  parent_id        = azurerm_resource_group.spoke_identity.id
  address_space    = [local.identity_address_space]
  enable_telemetry = var.enable_telemetry

  subnets = {
    workload = {
      name             = "snet-workload"
      address_prefixes = [local.identity_address_space]
      route_table = {
        id = azurerm_route_table.spoke_identity.id
      }
    }
  }

  peerings = {
    hub = {
      name                               = "peer-identity-to-hub"
      remote_virtual_network_resource_id = module.connectivity.virtual_network_resource_ids["primary"]
      allow_forwarded_traffic            = true
      create_reverse_peering             = true
      reverse_name                       = "peer-hub-to-identity"
      reverse_allow_forwarded_traffic    = true
    }
  }

  providers = {
    azapi = azapi.identity
  }
}
"
`;

exports[`emitFiles > matches the committed snapshot of the default build > management.tf 1`] = `
"# Management: the Log Analytics workspace every subscription reports to, the data
# collection rules for the monitoring agent, the identity the agent runs as, and an
# Automation account. The names are locals because alz.tf builds policy parameters
# from them.
locals {
  management_resource_group_name  = "rg-alz-management-\${var.location}"
  log_analytics_workspace_name    = "law-alz-\${var.location}"
  automation_account_name         = "aa-alz-\${var.location}"
  ama_user_assigned_identity_name = "uami-ama"
}

module "management" {
  source  = "Azure/avm-ptn-alz-management/azurerm"
  version = "0.9.0"

  automation_account_name      = local.automation_account_name
  location                     = var.location
  log_analytics_workspace_name = local.log_analytics_workspace_name
  resource_group_name          = local.management_resource_group_name
  enable_telemetry             = var.enable_telemetry

  providers = {
    azurerm = azurerm.management
    azapi   = azapi.management
  }
}
"
`;

exports[`emitFiles > matches the committed snapshot of the default build > paths 1`] = `
[
  "terraform.tf",
  "providers.tf",
  "alz.tf",
  "subscriptions.tf",
  "management.tf",
  "connectivity.tf",
  "identity.tf",
  "application.tf",
  "variables.tf",
  "terraform.tfvars.example",
  "README.md",
]
`;

exports[`emitFiles > matches the committed snapshot of the default build > providers.tf 1`] = `
"# The default providers take the tenant, subscription and credentials from the
# ARM_TENANT_ID, ARM_SUBSCRIPTION_ID, ARM_CLIENT_ID and ARM_CLIENT_SECRET variables
# of the HCP Terraform workspace. The aliases below point each module at the
# subscription it deploys into, which is how a landing zone keeps management,
# connectivity, identity and every application apart.
provider "azurerm" {
  features {}
}

provider "azapi" {}

# The alz provider reads the "alz" architecture (the management group tree and
# the policy baseline) from this release of the Azure Landing Zones library.
provider "alz" {
  library_references = [{
    path = "platform/alz"
    ref  = "2026.08.1"
  }]
}

provider "azurerm" {
  alias           = "management"
  subscription_id = var.management_subscription_id
  features {}
}

provider "azapi" {
  alias           = "management"
  subscription_id = var.management_subscription_id
}

provider "azurerm" {
  alias           = "connectivity"
  subscription_id = var.connectivity_subscription_id
  features {}
}

provider "azapi" {
  alias           = "connectivity"
  subscription_id = var.connectivity_subscription_id
}

provider "azurerm" {
  alias           = "identity"
  subscription_id = var.identity_subscription_id
  features {}
}

provider "azapi" {
  alias           = "identity"
  subscription_id = var.identity_subscription_id
}

provider "azurerm" {
  alias           = "corp_1"
  subscription_id = var.corp_subscription_ids[0]
  features {}
}

provider "azapi" {
  alias           = "corp_1"
  subscription_id = var.corp_subscription_ids[0]
}

provider "azurerm" {
  alias           = "online_1"
  subscription_id = var.online_subscription_ids[0]
  features {}
}

provider "azapi" {
  alias           = "online_1"
  subscription_id = var.online_subscription_ids[0]
}
"
`;

exports[`emitFiles > matches the committed snapshot of the default build > subscriptions.tf 1`] = `
"# Every subscription this build places, one per platform role and per landing zone.
# A subscription can sit under one management group only, so the same id given twice
# would make the placements in alz.tf fight; the precondition refuses it at plan time.
locals {
  placed_subscription_ids = concat(
    [
      var.management_subscription_id,
      var.connectivity_subscription_id,
      var.identity_subscription_id,
    ],
    var.corp_subscription_ids,
    var.online_subscription_ids,
  )
}

output "placed_subscription_ids" {
  description = "Every subscription id this build places, in placement order."
  value       = local.placed_subscription_ids

  precondition {
    condition     = length(distinct(local.placed_subscription_ids)) == length(local.placed_subscription_ids)
    error_message = "Every subscription id must be distinct: a subscription can be placed under one management group only."
  }
}
"
`;

exports[`emitFiles > matches the committed snapshot of the default build > terraform.tf 1`] = `
"# Generated by the HybridCloudWorks Landing Zone Builder for learning. Never applied here.
terraform {
  required_version = ">= 1.12, < 2.0"

  required_providers {
    alz = {
      source  = "azure/alz"
      version = "~> 0.21"
    }
    azapi = {
      source  = "Azure/azapi"
      version = "~> 2.12"
    }
    azurerm = {
      source  = "hashicorp/azurerm"
      version = "~> 4.35"
    }
    random = {
      source  = "hashicorp/random"
      version = "~> 3.6"
    }
  }
}
"
`;

exports[`emitFiles > matches the committed snapshot of the default build > terraform.tfvars.example 1`] = `
"# Copy to terraform.tfvars. The subscription ids below are placeholders, not defaults:
# every one must be replaced with a real subscription id before any plan.
location                     = "centralus"
hub_address_space            = "10.0.0.0/16"
spoke_address_space          = "10.1.0.0/16"
security_contact_email       = "security@example.com"
management_subscription_id   = "00000000-0000-0000-0000-000000000001"
connectivity_subscription_id = "00000000-0000-0000-0000-000000000002"
identity_subscription_id     = "00000000-0000-0000-0000-000000000003"
corp_subscription_ids        = ["00000000-0000-0000-0000-000000000011"]
online_subscription_ids      = ["00000000-0000-0000-0000-000000000021"]
"
`;

exports[`emitFiles > matches the committed snapshot of the default build > variables.tf 1`] = `
"variable "location" {
  type        = string
  default     = "centralus"
  description = "The Azure region for every regional resource."
}

variable "enable_telemetry" {
  type        = bool
  default     = true
  description = "Whether the Azure Verified Modules send their usage telemetry to Microsoft."
}

variable "parent_management_group_id" {
  type        = string
  default     = null
  description = "The NAME of the management group to create the \\"alz\\" root under (a bare id such as contoso, never a resource id), or null for the tenant root group."

  validation {
    condition     = var.parent_management_group_id == null ? true : (length(var.parent_management_group_id) > 0 && !strcontains(var.parent_management_group_id, "/"))
    error_message = "A management group name, non-empty and without the /providers/Microsoft.Management/managementGroups/ prefix; null for the tenant root group."
  }
}

variable "hub_address_space" {
  type        = string
  default     = "10.0.0.0/16"
  description = "The IPv4 address space of the hub virtual network."

  validation {
    condition     = can(regex("^([0-9]{1,3}[.]){3}[0-9]{1,3}/(8|9|10|11|12|13|14|15|16|17|18|19|20|21|22|23|24)$", var.hub_address_space)) && can(cidrhost(var.hub_address_space, 0))
    error_message = "An IPv4 CIDR with a prefix from /8 to /24."
  }
}

variable "spoke_address_space" {
  type        = string
  default     = "10.1.0.0/16"
  description = "The IPv4 range every spoke is carved from, one /24 each; must not overlap the hub."

  validation {
    condition     = can(regex("^([0-9]{1,3}[.]){3}[0-9]{1,3}/(8|9|10|11|12|13|14|15|16|17|18|19|20)$", var.spoke_address_space)) && can(cidrhost(var.spoke_address_space, 0))
    error_message = "An IPv4 CIDR with a prefix from /8 to /20."
  }

  validation {
    condition = (
      can(cidrhost(var.hub_address_space, 0)) && can(cidrhost(var.spoke_address_space, 0))
      ? (
        tonumber(split("/", var.hub_address_space)[1]) <= tonumber(split("/", var.spoke_address_space)[1])
        ? cidrsubnet("\${cidrhost(var.spoke_address_space, 0)}/\${split("/", var.hub_address_space)[1]}", 0, 0) != cidrsubnet(var.hub_address_space, 0, 0)
        : cidrsubnet("\${cidrhost(var.hub_address_space, 0)}/\${split("/", var.spoke_address_space)[1]}", 0, 0) != cidrsubnet(var.spoke_address_space, 0, 0)
      )
      : true
    )
    error_message = "The spoke range must not overlap the hub address space."
  }
}

variable "security_contact_email" {
  type        = string
  description = "The address Microsoft Defender for Cloud notifies; the Deploy-MDFC-Config-H224 assignment, part of the alz baseline whether enforced or not, requires one."

  validation {
    condition     = can(regex("^[^@ ]+@[^@ ]+[.][^@ ]+$", var.security_contact_email))
    error_message = "An email address."
  }
}

variable "management_subscription_id" {
  type        = string
  description = "The management subscription."

  validation {
    condition     = can(regex("^[0-9a-fA-F]{8}-([0-9a-fA-F]{4}-){3}[0-9a-fA-F]{12}$", var.management_subscription_id))
    error_message = "A subscription id is a GUID."
  }
}

variable "connectivity_subscription_id" {
  type        = string
  description = "The connectivity subscription."

  validation {
    condition     = can(regex("^[0-9a-fA-F]{8}-([0-9a-fA-F]{4}-){3}[0-9a-fA-F]{12}$", var.connectivity_subscription_id))
    error_message = "A subscription id is a GUID."
  }
}

variable "identity_subscription_id" {
  type        = string
  description = "The identity subscription."

  validation {
    condition     = can(regex("^[0-9a-fA-F]{8}-([0-9a-fA-F]{4}-){3}[0-9a-fA-F]{12}$", var.identity_subscription_id))
    error_message = "A subscription id is a GUID."
  }
}

variable "corp_subscription_ids" {
  type        = list(string)
  description = "The corp landing zone subscriptions, one per landing zone."

  validation {
    condition     = length(var.corp_subscription_ids) == 1 && alltrue([for id in var.corp_subscription_ids : can(regex("^[0-9a-fA-F]{8}-([0-9a-fA-F]{4}-){3}[0-9a-fA-F]{12}$", id))])
    error_message = "Exactly 1 subscription id, each a GUID."
  }
}

variable "online_subscription_ids" {
  type        = list(string)
  description = "The online landing zone subscriptions, one per landing zone."

  validation {
    condition     = length(var.online_subscription_ids) == 1 && alltrue([for id in var.online_subscription_ids : can(regex("^[0-9a-fA-F]{8}-([0-9a-fA-F]{4}-){3}[0-9a-fA-F]{12}$", id))])
    error_message = "Exactly 1 subscription id, each a GUID."
  }
}
"
`;

exports[`emitFiles > matches the committed snapshot of the tree-only build, baseline present and not enforced > tree-only README.md 1`] = `
"# Azure landing zone, generated for learning

These files were generated by the HybridCloudWorks Landing Zone Builder from a
selection of components, to show what each part of an Azure landing zone becomes in
Terraform. They mirror HashiCorp’s validated pattern "Build an Azure landing zone
with Terraform" and call the current Azure Verified Modules for it. **They were
generated for learning and have never been applied by HybridCloudWorks.** Read them,
compare them with the pattern, and if you run them, do it in a tenant you own, after
a \`terraform plan\` you have read.

## What is in this build

- **Management groups**: The tree of management groups every subscription is placed in. — \`Azure/avm-ptn-alz/azurerm\` 0.21.0

## Files

- \`terraform.tf\`
- \`providers.tf\`
- \`alz.tf\`
- \`variables.tf\`
- \`terraform.tfvars.example\`

## Prerequisites, from the validated pattern

- An HCP Terraform organisation with a workspace connected to the repository these
  files are committed to, holding the state and running the plans.
- An Azure tenant in which the deploying identity has been granted Owner at the tenant
  root scope (\`/\`), which is what creating management groups and assigning policy at
  the root requires; a Global Administrator elevates access to grant it.
- A service principal (or a workload identity federation credential) for the workspace,
  with its tenant, client and subscription set as the workspace’s \`ARM_TENANT_ID\`,
  \`ARM_CLIENT_ID\`, \`ARM_CLIENT_SECRET\` and \`ARM_SUBSCRIPTION_ID\` variables.
- One subscription per platform role and per application landing zone, whose ids go
  into \`terraform.tfvars\`. The ids in \`terraform.tfvars.example\` are placeholders, not
  defaults: every one must be replaced with a real subscription id before any plan.
- Terraform >= 1.12, < 2.0.

## How a landing zone is built

Each landing zone, identity included, is a subscription that \`alz.tf\` places under
its management group and a spoke virtual network, one /24 carved from the spoke range,
that the virtual network module peers to the hub in both directions. Corp and identity
spokes carry a route table whose default route points at the firewall when it is
selected; online spokes egress directly.

## Module versions

Pinned to the versions the Terraform Registry listed on 2026-09-25:

- \`Azure/avm-ptn-alz/azurerm\` 0.21.0
- \`Azure/avm-ptn-alz-management/azurerm\` 0.9.0
- \`Azure/avm-ptn-alz-connectivity-hub-and-spoke-vnet/azurerm\` 0.17.5
- \`Azure/avm-res-network-virtualnetwork/azurerm\` 0.22.2

## Running it

From a checkout with \`terraform.tfvars\` filled in:

\`\`\`
terraform init
terraform plan
\`\`\`

A landing zone creates resources that cost money every hour they exist: Azure
Firewall, Bastion, the Log Analytics workspace and the DDoS plan if you enable one.
Read the plan, and destroy what you built when the lesson is over.
"
`;

exports[`emitFiles > matches the committed snapshot of the tree-only build, baseline present and not enforced > tree-only alz.tf 1`] = `
"# Management groups: the "alz" architecture, a root named "alz" with Platform and
# Landing zones beneath it. It is created under the tenant root group, or under the
# management group named in var.parent_management_group_id. The policy baseline is
# part of the same architecture: selecting Policy supplies its parameters and lets it
# enforce; leaving it out deploys the same assignments with every one set to
# DoNotEnforce.
data "azapi_client_config" "current" {}

module "alz" {
  source  = "Azure/avm-ptn-alz/azurerm"
  version = "0.21.0"

  # parent_resource_id is the parent management group NAME, not its resource id: the
  # module rejects a value containing "/" and prepends
  # /providers/Microsoft.Management/managementGroups/ itself. The tenant root group is
  # named after the tenant id, which is why that is the fallback.
  architecture_name  = "alz"
  location           = var.location
  parent_resource_id = coalesce(var.parent_management_group_id, data.azapi_client_config.current.tenant_id)
  enable_telemetry   = var.enable_telemetry

  # Policy was not selected. The "alz" architecture carries its policy baseline
  # regardless, so the assignments below are created, but every one of them is set to
  # DoNotEnforce: the tree is deployed with the baseline present and inert, and a
  # reader can inspect the assignments without any of them denying or remediating.
  # The default values the build can supply are still passed, because the module
  # evaluates them whether or not an assignment is enforced.
  policy_assignments_to_modify = {
    alz = {
      policy_assignments = {
        Audit-ResourceRGLocation = {
          enforcement_mode = "DoNotEnforce"
        }
        Audit-TrustedLaunch = {
          enforcement_mode = "DoNotEnforce"
        }
        Audit-UnusedResources = {
          enforcement_mode = "DoNotEnforce"
        }
        Audit-ZoneResiliency = {
          enforcement_mode = "DoNotEnforce"
        }
        Deny-Classic-Resources = {
          enforcement_mode = "DoNotEnforce"
        }
        Deny-UnmanagedDisk = {
          enforcement_mode = "DoNotEnforce"
        }
        Deploy-ASC-Monitoring = {
          enforcement_mode = "DoNotEnforce"
        }
        Deploy-AzActivity-Log = {
          enforcement_mode = "DoNotEnforce"
        }
        Deploy-Diag-LogsCat = {
          enforcement_mode = "DoNotEnforce"
        }
        Deploy-MCSB2-Monitoring = {
          enforcement_mode = "DoNotEnforce"
        }
        Deploy-MDEndpoints = {
          enforcement_mode = "DoNotEnforce"
        }
        Deploy-MDEndpointsAMA = {
          enforcement_mode = "DoNotEnforce"
        }
        Deploy-MDFC-Config-H224 = {
          enforcement_mode = "DoNotEnforce"
        }
        Deploy-MDFC-OssDb = {
          enforcement_mode = "DoNotEnforce"
        }
        Deploy-MDFC-SqlAtp = {
          enforcement_mode = "DoNotEnforce"
        }
        Deploy-SvcHealth-BuiltIn = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-ACSB = {
          enforcement_mode = "DoNotEnforce"
        }
      }
    }
    platform = {
      policy_assignments = {
        DenyAction-DeleteUAMIAMA = {
          enforcement_mode = "DoNotEnforce"
        }
        Deploy-GuestAttest = {
          enforcement_mode = "DoNotEnforce"
        }
        Deploy-MDFC-DefSQL-AMA = {
          enforcement_mode = "DoNotEnforce"
        }
        Deploy-VM-ChangeTrack = {
          enforcement_mode = "DoNotEnforce"
        }
        Deploy-VM-Monitoring = {
          enforcement_mode = "DoNotEnforce"
        }
        Deploy-vmArc-ChangeTrack = {
          enforcement_mode = "DoNotEnforce"
        }
        Deploy-vmHybr-Monitoring = {
          enforcement_mode = "DoNotEnforce"
        }
        Deploy-VMSS-ChangeTrack = {
          enforcement_mode = "DoNotEnforce"
        }
        Deploy-VMSS-Monitoring = {
          enforcement_mode = "DoNotEnforce"
        }
        Enable-AUM-CheckUpdates = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-ASR = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-Encrypt-CMK0 = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-GR-APIM0 = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-GR-AppServices0 = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-GR-Automation0 = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-GR-BotService0 = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-GR-CogServ0 = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-GR-Compute0 = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-GR-ContApps0 = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-GR-ContInst0 = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-GR-ContReg0 = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-GR-CosmosDb0 = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-GR-DataExpl0 = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-GR-DataFactory0 = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-GR-EventGrid0 = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-GR-EventHub0 = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-GR-KeyVault = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-GR-KeyVaultSup0 = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-GR-Kubernetes0 = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-GR-MachLearn0 = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-GR-MySQL0 = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-GR-Network0 = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-GR-OpenAI0 = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-GR-PostgreSQL0 = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-GR-ServiceBus0 = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-GR-SQL0 = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-GR-Storage0 = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-GR-Synapse0 = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-GR-VirtualDesk0 = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-Subnet-Private = {
          enforcement_mode = "DoNotEnforce"
        }
      }
    }
    landingzones = {
      policy_assignments = {
        Audit-AppGW-WAF = {
          enforcement_mode = "DoNotEnforce"
        }
        Deny-IP-forwarding = {
          enforcement_mode = "DoNotEnforce"
        }
        Deny-MgmtPorts-Internet = {
          enforcement_mode = "DoNotEnforce"
        }
        Deny-Priv-Esc-AKS = {
          enforcement_mode = "DoNotEnforce"
        }
        Deny-Privileged-AKS = {
          enforcement_mode = "DoNotEnforce"
        }
        Deny-Storage-http = {
          enforcement_mode = "DoNotEnforce"
        }
        Deny-Subnet-Without-Nsg = {
          enforcement_mode = "DoNotEnforce"
        }
        Deploy-AzSqlDb-Auditing = {
          enforcement_mode = "DoNotEnforce"
        }
        Deploy-GuestAttest = {
          enforcement_mode = "DoNotEnforce"
        }
        Deploy-MDFC-DefSQL-AMA = {
          enforcement_mode = "DoNotEnforce"
        }
        Deploy-SQL-TDE = {
          enforcement_mode = "DoNotEnforce"
        }
        Deploy-SQL-Threat = {
          enforcement_mode = "DoNotEnforce"
        }
        Deploy-VM-Backup = {
          enforcement_mode = "DoNotEnforce"
        }
        Deploy-VM-ChangeTrack = {
          enforcement_mode = "DoNotEnforce"
        }
        Deploy-VM-Monitoring = {
          enforcement_mode = "DoNotEnforce"
        }
        Deploy-vmArc-ChangeTrack = {
          enforcement_mode = "DoNotEnforce"
        }
        Deploy-vmHybr-Monitoring = {
          enforcement_mode = "DoNotEnforce"
        }
        Deploy-VMSS-ChangeTrack = {
          enforcement_mode = "DoNotEnforce"
        }
        Deploy-VMSS-Monitoring = {
          enforcement_mode = "DoNotEnforce"
        }
        Enable-AUM-CheckUpdates = {
          enforcement_mode = "DoNotEnforce"
        }
        Enable-DDoS-VNET = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-AKS-HTTPS = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-ASR = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-Encrypt-CMK0 = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-GR-APIM0 = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-GR-AppServices0 = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-GR-Automation0 = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-GR-BotService0 = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-GR-CogServ0 = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-GR-Compute0 = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-GR-ContApps0 = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-GR-ContInst0 = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-GR-ContReg0 = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-GR-CosmosDb0 = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-GR-DataExpl0 = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-GR-DataFactory0 = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-GR-EventGrid0 = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-GR-EventHub0 = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-GR-KeyVault = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-GR-KeyVaultSup0 = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-GR-Kubernetes0 = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-GR-MachLearn0 = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-GR-MySQL0 = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-GR-Network0 = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-GR-OpenAI0 = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-GR-PostgreSQL0 = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-GR-ServiceBus0 = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-GR-SQL0 = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-GR-Storage0 = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-GR-Synapse0 = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-GR-VirtualDesk0 = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-Subnet-Private = {
          enforcement_mode = "DoNotEnforce"
        }
        Enforce-TLS-SSL-Q225 = {
          enforcement_mode = "DoNotEnforce"
        }
      }
    }
    corp = {
      policy_assignments = {
        Audit-PeDnsZones = {
          enforcement_mode = "DoNotEnforce"
        }
        Deny-HybridNetworking = {
          enforcement_mode = "DoNotEnforce"
        }
        Deny-Public-Endpoints = {
          enforcement_mode = "DoNotEnforce"
        }
        Deny-Public-IP-On-NIC = {
          enforcement_mode = "DoNotEnforce"
        }
        Deploy-Private-DNS-Zones = {
          enforcement_mode = "DoNotEnforce"
        }
      }
    }
    local = {
      policy_assignments = {
        Enforce-ALDO-Services = {
          enforcement_mode = "DoNotEnforce"
        }
      }
    }
    sandbox = {
      policy_assignments = {
        Enforce-ALZ-Sandbox = {
          enforcement_mode = "DoNotEnforce"
        }
      }
    }
    connectivity = {
      policy_assignments = {
        Enable-DDoS-VNET = {
          enforcement_mode = "DoNotEnforce"
        }
      }
    }
    identity = {
      policy_assignments = {
        Deny-MgmtPorts-Internet = {
          enforcement_mode = "DoNotEnforce"
        }
        Deny-Public-IP = {
          enforcement_mode = "DoNotEnforce"
        }
        Deny-Subnet-Without-Nsg = {
          enforcement_mode = "DoNotEnforce"
        }
        Deploy-VM-Backup = {
          enforcement_mode = "DoNotEnforce"
        }
      }
    }
    decommissioned = {
      policy_assignments = {
        Enforce-ALZ-Decomm = {
          enforcement_mode = "DoNotEnforce"
        }
      }
    }
  }
  policy_default_values = {
    resource_group_location                   = jsonencode({ value = var.location })
    resource_group_name_service_health_alerts = jsonencode({ value = "rg-alz-service-health-\${var.location}" })
    resource_group_name_mdfc                  = jsonencode({ value = "rg-alz-mdfc-export-\${var.location}" })
    email_security_contact                    = jsonencode({ value = var.security_contact_email })
  }
}

output "root_management_group_resource_id" {
  description = "The resource id of the \\"alz\\" management group at the top of the tree."
  value       = module.alz.management_group_resource_ids["alz"]
}
"
`;

exports[`emitFiles > matches the committed snapshot of the tree-only build, baseline present and not enforced > tree-only paths 1`] = `
[
  "terraform.tf",
  "providers.tf",
  "alz.tf",
  "variables.tf",
  "terraform.tfvars.example",
  "README.md",
]
`;

exports[`emitFiles > matches the committed snapshot of the tree-only build, baseline present and not enforced > tree-only providers.tf 1`] = `
"# The default providers take the tenant, subscription and credentials from the
# ARM_TENANT_ID, ARM_SUBSCRIPTION_ID, ARM_CLIENT_ID and ARM_CLIENT_SECRET variables
# of the HCP Terraform workspace. The aliases below point each module at the
# subscription it deploys into, which is how a landing zone keeps management,
# connectivity, identity and every application apart.
provider "azurerm" {
  features {}
}

provider "azapi" {}

# The alz provider reads the "alz" architecture (the management group tree and
# the policy baseline) from this release of the Azure Landing Zones library.
provider "alz" {
  library_references = [{
    path = "platform/alz"
    ref  = "2026.08.1"
  }]
}
"
`;

exports[`emitFiles > matches the committed snapshot of the tree-only build, baseline present and not enforced > tree-only terraform.tf 1`] = `
"# Generated by the HybridCloudWorks Landing Zone Builder for learning. Never applied here.
terraform {
  required_version = ">= 1.12, < 2.0"

  required_providers {
    alz = {
      source  = "azure/alz"
      version = "~> 0.21"
    }
    azapi = {
      source  = "Azure/azapi"
      version = "~> 2.12"
    }
    azurerm = {
      source  = "hashicorp/azurerm"
      version = "~> 4.35"
    }
    random = {
      source  = "hashicorp/random"
      version = "~> 3.6"
    }
  }
}
"
`;

exports[`emitFiles > matches the committed snapshot of the tree-only build, baseline present and not enforced > tree-only terraform.tfvars.example 1`] = `
"# Copy to terraform.tfvars. The subscription ids below are placeholders, not defaults:
# every one must be replaced with a real subscription id before any plan.
location               = "centralus"
security_contact_email = "security@example.com"
"
`;

exports[`emitFiles > matches the committed snapshot of the tree-only build, baseline present and not enforced > tree-only variables.tf 1`] = `
"variable "location" {
  type        = string
  default     = "centralus"
  description = "The Azure region for every regional resource."
}

variable "enable_telemetry" {
  type        = bool
  default     = true
  description = "Whether the Azure Verified Modules send their usage telemetry to Microsoft."
}

variable "parent_management_group_id" {
  type        = string
  default     = null
  description = "The NAME of the management group to create the \\"alz\\" root under (a bare id such as contoso, never a resource id), or null for the tenant root group."

  validation {
    condition     = var.parent_management_group_id == null ? true : (length(var.parent_management_group_id) > 0 && !strcontains(var.parent_management_group_id, "/"))
    error_message = "A management group name, non-empty and without the /providers/Microsoft.Management/managementGroups/ prefix; null for the tenant root group."
  }
}

variable "security_contact_email" {
  type        = string
  description = "The address Microsoft Defender for Cloud notifies; the Deploy-MDFC-Config-H224 assignment, part of the alz baseline whether enforced or not, requires one."

  validation {
    condition     = can(regex("^[^@ ]+@[^@ ]+[.][^@ ]+$", var.security_contact_email))
    error_message = "An email address."
  }
}
"
`;
